# football-ticket-tracker

./: # TODO Steps.txt  .editorconfig  .gitattributes  .gitignore  .secrets.example.txt  MANIFEST.in  Makefile  README.md  _final_sync.py  _train_once.py  _train_predict.py  build_dataset.py  check_snapshots.py  diag_out.txt  install_cfb-tix.bat  launch_gui.cmd  launch_gui.pyw  make_clean_zip.sh  make_zip.sh  project_structure.txt  pyproject.toml  pyproject.toml.20250822_095958.bak  rankings_fetcher.py  requirements.txt  rivalry_scraper.py  run_daemon.cmd  run_jobs_now.py  run_now_windows.ps1  run_pipeline_now.py  schedule_fetcher.py  stadium_scraper.py  ticket_pricer.py  tickpick_debug.html  tree.txt  verify_outputs.py
.build_ext4_work/rootfs/: install_linux.sh
.build_ext4_work/rootfs/app/: Makefile  README.md  pyproject.toml
.build_ext4_work/rootfs/app/data/permanent/: team_aliases.json  tickpick_teams.txt
.build_ext4_work/rootfs/app/data/predicted/: predicted_prices_optimal.csv
.build_ext4_work/rootfs/app/data/weekly/: full_2025_schedule.csv
.build_ext4_work/rootfs/app/models/: ticket_price_model.pkl
.build_ext4_work/rootfs/app/packaging/: build_ext4.sh
.build_ext4_work/rootfs/app/packaging/windows/: install_win.ps1
.build_ext4_work/rootfs/app/src/builders/: daily_snapshot.py
.build_ext4_work/rootfs/app/src/cfb_tix/: __main__.py  daemon.py
.build_ext4_work/rootfs/app/src/fetchers/: fetch_ncaa_events.py  rankings_fetcher.py
.build_ext4_work/rootfs/app/src/modeling/: evaluate_predictions.py
.build_ext4_work/rootfs/app/src/scrapers/: tickpick_pricer.py
.claude/: settings.json  settings.local.json
.github/: build-installers.yml
.github/workflows/: run_pipeline.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
config/: data_store.toml
configs/systemd/: cfb-ticket-tracker.service  cfb-ticket-tracker.timer
configs/windows/: cfb-ticket-tracker.xml  daemon_runner.ps1
data/: .~lock.enriched_schedule_2025.csv#  _daemon_push_probe.txt  _push_test.txt  enriched_schedule_2025.csv  full_2025_schedule.csv  full_2026_schedule.csv  ncaa_football_events_2025.csv  predicted_prices_optimal.csv  price_snapshots.csv  sample_price_snapshots.csv  team_alias_matches.csv  tickpick_prices_20250818_172859.csv  tickpick_prices_20250818_172859.json  wiki_ap_top_25_2024.csv
data/annual/: rivalries_2025.csv  (+3 more)
docs/: README.md
models/: ticket_price_model.pkl
packaging/: build_ext4.sh
reports/: catboost_features.csv  catboost_report_2026.csv  weekly_report_2025-07-06.md
scripts/: backfill_snapshot_rankings_by_collection.py  backfill_snapshot_times.py  backfill_win_loss.py  daemon_loop.py  health_check.py  make_zip.sh  model_sweep.py  patch_price_snapshots_with_rankings.py  reset_linux.sh  reset_windows.ps1  run_now_windows.ps1  scheduler.py  start_daemon.ps1  sync_snapshots.py
src/: inspect_csv.py  predict_price.py  price_logger.py  train_price_model.py
tools/: _runner_daemon.ps1  backfill_point_diffs.py  diag_imports.py  merge_snapshots_with_schedule.py  repair_merge_temp_snapshots.py  run_daemon.ps1  update_snapshots_from_schedule.py
(+522 files in other folders)
