[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfb-tix"
version = "0.1.0"
description = "College Football Ticket Price Tracker"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Randi Sims" }]
license = { text = "Proprietary" }

# Core + GUI/runtime deps
dependencies = [
  "pandas>=2.2",
  "numpy>=1.23",
  "PyQt5>=5.15,<6",
  "matplotlib>=3.8",
  "apscheduler>=3.10",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "cloudscraper>=1.2",
  "joblib>=1.3",
  "scikit-learn>=1.5",
  "python-dotenv",
  "tomli; python_version < '3.11'"
]

[project.scripts]
cfb-tix = "cfb_tix.daemon:main"
# GUI lives in src/gui/, not under cfb_tix
cfb-tix-gui = "gui.ticket_predictor_gui:main"
# Shortcut creator inside the package
cfb-tix-shortcuts = "cfb_tix.windows.create_shortcuts:main"

[project.gui-scripts]
# Windowless launchers (no console window on Windows)
Ticket-Price-Predictor = "gui.ticket_predictor_gui:main"
CFB-Ticket-Tracker     = "cfb_tix.launchers:run_daemon_silently"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Icons bundled inside the package (place under src/cfb_tix/assets/icons/)
cfb_tix = ["assets/icons/*.ico"]
